native/native.tests/cli-tests/testData/cli/syntaxError_lt.out
native/native.tests/cli-tests/testData/cli/syntaxError.kt:1:10: error: syntax error: Expecting '}'.
fun a() {
         ^
COMPILATION_ERROR
